--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hue-filled-resume</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <title>Thanh Nguyen's Porfolio</title>
+    <meta name="description" content="Thanh Nguyen Portfolio Website" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="Lovable Generated Project" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Thanh Nguyen Portfolio Website" />
+    <meta property="og:description" content="Thanh Nguyen Portfolio Website" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
